hard-gists/6e20dba959277bd9af77/run.log
=== Docker Run Log for 6e20dba959277bd9af77 ===
Started at: Mi 29. Okt 16:51:51 CET 2025

[2025-10-29 16:51:51] START: Running container for 6e20dba959277bd9af77
[2025-10-29 16:51:51] SUCCESS: Container abee4a5d2a14c29afc4eb238b1d9fa831513fe07963bab528f693aa21c225ca7 started for 6e20dba959277bd9af77
=== Container logs for 6e20dba959277bd9af77 ===
  File "/snippet.py", line 34
    print "SCORE:", auc
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6e20dba959277bd9af77 ===
[2025-10-29 16:51:54] INFO: Container abee4a5d2a14c29afc4eb238b1d9fa831513fe07963bab528f693aa21c225ca7 has stopped
